fix autoplay on mobile

--- a/src/components/Pages/HomePage/Video/Video.scss
+++ b/src/components/Pages/HomePage/Video/Video.scss
@@ -12,7 +12,7 @@
 @media (max-width: 576px) {
   .Video {
     padding: 0;
-    min-height: 30rem;
+    min-height: 20rem;
     video {
       width: 100%;
     }
